# CIRI_example

./: CMakeLists.txt  README.md
data_structure/base/: ellipsoid.h
include/: ObstacleFree.hpp  ciri.h  corridor_finder.h  corridor_finder_dynamic.h  datatype.h  firi.hpp  gcopter.hpp  gcopter_fixed.hpp  geo_utils.hpp  trajectory.hpp
src/: FIRI.ipynb  ObstacleFree.cpp  ObstacleFree_backup.cpp  ciri.cpp  corridor_finder.cpp  corridor_finder_dynamic.cpp  e.py  ellipsoid.py  kdtree.c  kdtree_dynamic.c
src/utils/: closest_point_eg.py  ellipsoid.cpp
